Added Stormglass.io API for free water surface temperature data.
- Added a script that handles making requests for each location group.
- Added location groups: a new collection in MongoDB that has data that can be shared between many locations.
- Fixed some small bugs in the location input page.
- Added a config.py that will hold initialisation functions to avoid senseless duplication.
- Added api usage monitoring. Stormglass has a 10 call/day limit so i needed a way to keep track of calls and stop the program from over-requesting. In api_usage.py I have a function to check if i reached the limit, and another to add to the count/reset the count.

--- a/templates/location_input/index.html
+++ b/templates/location_input/index.html
@@ -27,8 +27,8 @@
         </div>
 
         <div class="form-row-no-button">
-            <label for="location_groups_input">Groups: (G1, ...)</label>
-            <input type="text" id="location_groups_input" name="location_groups_input">
+            <label for="location_group_input">Group:</label>
+            <input type="text" id="location_group_input" name="location_group_input">
         </div>
 
         <label for="location_coordinates_input">Coordinates: (lat, long)</label>
@@ -68,9 +68,3 @@
 </body>
 
 </html>
-
-
-<!DOCTYPE html>
-<html lang="en">
-
-<head>
